files/styles/app.css
@import "reset.css";
@import "grid.css";
@import "fonts.css";

:root {
  --first-color: #7ac751;
  --second-color: #e2e2ea;
  --white: #ffffff;
  --blue: #00b7f1;
  --red: #ff6868;
  --smoke-color: #f7f8fa;
  --text-first-color: #555555;
  --text-second-color: #c2c2c2;
  --rubik: "Rubik";
  --rubik-Medium: "Rubik Medium";
  --mulish: "Mulish";
  --mulish-semibold: "Mulish SemiBold";
  --mulish-bold: "Mulish Bold";
  --first-transition: all 100ms ease-in;
}
html {
  font-size: 62.5%; /* 10px */
  scroll-behavior: smooth;
  overflow-x: hidden;
}
body {
  line-height: 1.4;
  font-size: 1.6rem;
  overflow-x: hidden;
  font-family: var(--rubik);
  color: var(--text-first-color);
}

/*

-- Reset Style --

*/

a {
  text-decoration: none;
  color: inherit;
}

/*

-- Component --

*/

.popup-search-bar {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  backdrop-filter: blur(4rem);
  width: 100%;
  height: 100vh;
  z-index: -1;
  opacity: 0;
  transition: all 150ms ease-in;
}
.popup-search-bar--open {
  z-index: 10;
  opacity: 1;
}
.popup-search-bar .container {
  height: 100%;
}
.popup-search-bar__search {
  width: 100%;
  height: 15%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.popup-search-bar__inputs {
  position: relative;
  width: 100%;
  height: 5rem;
  border-radius: 1rem;
  overflow: hidden;
  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
}
.popup-search-bar__close-btn {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  font-size: 3.5rem;
  z-index: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  color: red;
  width: 5rem;
  cursor: pointer;
}
.popup-search-bar__input {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  border: none;
  outline: none;
  font-family: inherit;
  padding: 0 17rem 0 5rem;
  font-size: inherit;
}
.popup-search-bar__category {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 5rem;
  border: none;
  outline: none;
  font-family: inherit;
  border-left: 1px solid var(--second-color);
  background-color: var(--white);
  padding: 0 1rem;
}
.popup-search-bar__search-btn {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: var(--first-color);
  display: flex;
  align-items: center;
  justify-content: center;
  width: 5rem;
  font-size: 2.5rem;
  color: var(--white);
  cursor: pointer;
}
.popup-search-bar__results {
  height: 85%;
  padding-top: 1rem;
}
.result {
  width: 100%;
  height: 8rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--white);
  border-radius: 1rem;
  overflow: hidden;
  gap: 1rem;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
}
.result__image {
  height: 100%;
  width: 30%;
  background-color: var(--second-color);
  display: flex;
  align-items: center;
  justify-content: center;
}
.result__content {
  width: 70%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 0.5rem;
}
.result__name {
  font-family: var(--rubik-Medium);
  line-height: 1;
}
.result__category {
  font-family: var(--mulish);
  font-size: 1.4rem;
  color: var(--text-second-color);
}
/* popup search bar slider */
.popup-search-bar .swiper {
  width: 100%;
  height: 100%;
  overflow-x: visible;
}
.popup-search-bar .swiper-slide {
  font-size: 18px;
  height: auto;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.popup-search-bar .swiper-scrollbar {
  right: -3rem !important;
  top: 0 !important;
  width: 0.5rem !important;
}
.popup-search-bar .swiper-scrollbar-drag {
  background-color: var(--first-color) !important;
}
/*

-- Helper Class --

*/

/*

-- App Style --

*/
.header {
}

/* top bar */

.top-bar {
  background-color: var(--first-color);
}
.top-bar__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 5rem;
  color: var(--white);
}
.top-bar__title {
}
.top-bar__btns {
  display: flex;
  align-items: center;
}
.top-bar__select-language {
  color: inherit;
  background-color: transparent;
  border: none;
  outline: none;
  font-family: inherit;
  font-size: inherit;
  cursor: pointer;
}
.top-bar__select-language option {
  color: var(--text-first-color);
}
.top-bar__login {
}
.top-bar__line {
  height: 2rem;
  width: 0.3rem;
  border-radius: 2rem;
  background-color: var(--white);
  margin: 0 1.5rem;
}

/* header top */

.header-top {
  margin: 2rem 0;
}
.header-top__wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.header__logo-box {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}
.header__logo {
}
.header__logo-text {
  font-family: var(--rubik-Medium);
  font-size: 2.4rem;
}
.search-bar {
  display: flex;
  align-items: center;
  width: 58rem;
  height: 4.6rem;
  border: 2px solid var(--first-color);
  border-radius: 1rem;
  overflow: hidden;
}
.search-bar__input {
  border: none;
  height: 100%;
  width: 100%;
  font-family: inherit;
  padding-left: 2rem;
  outline: none;
}
.search-bar__input::placeholder {
  color: var(--text-second-color);
}
.search-bar__categories {
  border: none;
  width: 15rem;
  height: 100%;
  font-family: inherit;
  margin-right: 1rem;
  border-left: 1px solid var(--second-color);
  outline: none;
  padding-left: 1rem;
  color: inherit;
}
.search-bar__btn {
  height: 100%;
  width: 7rem;
  background-color: var(--first-color);
  color: var(--white);
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2.3rem;
  cursor: pointer;
}
.header-top__btns {
  display: flex;
  align-items: center;
  gap: 2rem;
  height: 100%;
}
.header-top__btn {
  color: inherit;
  font-size: 2.6rem;
  display: flex;
  align-items: center;
  transition: var(--first-transition);
}
.header-top__btn:hover {
  color: var(--first-color);
}

/* nav bar (desktap) */

.nav-bar {
  background-color: var(--smoke-color);
}
.nav-bar__wrapper {
  height: 6.5rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}
.nav-bar__all-collections {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: inherit;
  background-color: var(--first-color);
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  font-family: var(--rubik-Medium);
  color: var(--white);
  width: 26rem;
  cursor: pointer;
  transition: var(--first-transition);
}
.all-collections__icon {
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
}
.all-collections__icon .line {
  position: relative;
  width: 1.6rem;
}
.all-collections__icon .line,
.all-collections__icon .line::after,
.all-collections__icon .line::before {
  background-color: var(--white);
  height: 0.28rem;
  display: block;
  border-radius: 2rem;
}
.all-collections__icon .line::before,
.all-collections__icon .line::after {
  content: " ";
  position: absolute;
}
.all-collections__icon .line::before {
  transform: translateY(-0.7rem);
  width: 2.2rem;
}
.all-collections__icon .line::after {
  transform: translateY(0.7rem);
  width: 1rem;
}
.all-collections__popup-list {
  z-index: 1;
  height: 0;
  overflow: hidden;
  display: none;
  transition: all 200ms ease-in;
  box-shadow: 0 5px 1.5rem rgba(0, 0, 0, 0.1);
}
.all-collections__popup-list--open {
  height: 44rem;
}
.menu {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  gap: 6rem;
}
.menu__item {
  transition: var(--first-transition);
}
.menu__item:hover {
  color: var(--first-color);
}
.menu__link {
}
.mobile-menu {
  display: none;
  position: fixed;
  top: 0;
  left: -22rem;
  bottom: 0;
  background-color: var(--smoke-color);
  backdrop-filter: blur(20px);
  z-index: 10;
  width: 22rem;
  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
  transition: all 150ms ease-in;
}
.mobile-menu--open {
  left: 0;
}
.mobile-menu__title {
  font-size: 2.5rem;
  text-align: center;
  color: var(--first-color);
  margin: 2rem 0;
}
.mobile-menu__list {
}
.mobile-menu__item {
  padding: 0.7rem 0 0.7rem 3rem;
  border-bottom: 1px solid var(--second-color);
  transition: var(--first-transition);
}
.mobile-menu__item:hover {
  color: var(--first-color);
}
.mobile-menu__link {
}
.cover {
  display: none;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.2);
  opacity: 0;
  z-index: -1;
  transition: all 150ms ease-in;
}
.cover--active {
  opacity: 1;
  z-index: 9;
}

/* header content */

.header-content {
  height: 44rem;
  overflow-y: hidden;
}
.header-content__wrapper {
  display: flex;
}
.header-content__collections {
  background-color: var(--smoke-color);
  width: 26rem;
  flex-shrink: 0;
}
.collections__item {
  height: 4rem;
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--second-color);
  padding-left: 3rem;
}
.collections__item:hover .collections__link {
  color: var(--first-color);
}
.collections__item:last-child {
  border: none;
}
.collections__link {
  color: var(--text-first-color);
  transition: var(--first-transition);
}
/* slider */
.header-content__banner {
  width: 108rem;
  height: 100%;
}
.header-content .swiper {
  width: 100%;
  height: 100%;
}
.header-content .swiper-slide {
  text-align: center;
  font-size: 18px;
  background: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
}
.banner__image-wrapper {
  overflow: hidden;
  padding: 1rem 0 0 1rem;
  display: block;
}
.banner__image {
  width: 100%;
}
.header-content__banner .swiper-pagination {
  padding-bottom: 1rem !important;
}
.header-content__banner .swiper-pagination-bullet {
}
.header-content__banner .swiper-pagination-bullet-active {
  background-color: #7ac751 !important;
  width: 2rem;
  border-radius: 2rem;
}
/* feature section */

.features-sec {
  margin: 6rem 0 3rem 0;
}
.feature {
  display: flex;
  align-items: center;
  gap: 1rem;
  justify-content: center;
}
.feature__icon {
}
.feature__content {
}
.feature__title {
  font-family: var(--rubik-Medium);
  font-size: 1.85rem;
}
.feature__caption {
  font-size: 1.3rem;
}
/* 
--------------------

        main

--------------------
*/
.main {
}
/* offer section */
.offer-sec {
  display: flex;
  gap: 2rem;
  justify-content: space-between;
  height: 60rem;
}
.offer-sec__left {
  width: 100%;
}
.offer-sec__right {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.offer {
  height: 100%;
  position: relative;
  overflow: hidden;
  padding: 4rem 2rem;
  filter: brightness(1.07);
}
.offer-sec__left .offer__back-image {
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  right: 0;
}
.offer-sec__right .offer__back-image {
  width: 110%;
}
.offer__back-image {
  position: absolute;
  bottom: 0;
  top: auto;
  right: -5rem;
  margin: auto;
  z-index: -1;
  width: 200%;
}
.offer__title {
  font-family: var(--mulish-bold);
  font-size: 2.2rem;
}
.offer__price {
  font-family: var(--mulish-semibold);
  color: var(--first-color);
  font-size: 2rem;
  margin: 0.5rem 0 1rem 0;
}
.offer__link {
  font-family: var(--mulish);
  display: flex;
  align-items: center;
}

